Revision history for Dancer-Template-Handlebars

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]

 [DOCUMENTATION]

 [ENHANCEMENTS]

 [NEW FEATURES]

 [STATISTICS]

0.2.0 2014-03-15
 [ENHANCEMENTS]
 - Now support layouts!

 [STATISTICS]
 - code churn: 5 files changed, 103 insertions(+), 1 deletion(-)

0.1.0 2014-03-14
 - First version, unleashed on an unsuspecting world.

 [STATISTICS]
 - code churn: 8 files changed, 335 insertions(+), 1 deletion(-)
